airflow/logs/dag_id=Gold_training_Pipeline1/run_id=manual__2024-10-03T105850.100477+0000/task_id=preprocess_the_extracted_data/attempt=2.log
[2024-10-03T10:59:11.444+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Gold_training_Pipeline1.preprocess_the_extracted_data manual__2024-10-03T10:58:50.100477+00:00 [queued]>
[2024-10-03T10:59:11.450+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Gold_training_Pipeline1.preprocess_the_extracted_data manual__2024-10-03T10:58:50.100477+00:00 [queued]>
[2024-10-03T10:59:11.451+0000] {taskinstance.py:2193} INFO - Starting attempt 2 of 4
[2024-10-03T10:59:11.461+0000] {taskinstance.py:2217} INFO - Executing <Task(PythonOperator): preprocess_the_extracted_data> on 2024-10-03 10:58:50.100477+00:00
[2024-10-03T10:59:11.465+0000] {standard_task_runner.py:60} INFO - Started process 915 to run task
[2024-10-03T10:59:11.467+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Gold_training_Pipeline1', 'preprocess_the_extracted_data', 'manual__2024-10-03T10:58:50.100477+00:00', '--job-id', '225', '--raw', '--subdir', 'DAGS_FOLDER/gold_training_pipeline.py', '--cfg-path', '/tmp/tmppoafkyeu']
[2024-10-03T10:59:11.469+0000] {standard_task_runner.py:88} INFO - Job 225: Subtask preprocess_the_extracted_data
[2024-10-03T10:59:11.598+0000] {task_command.py:423} INFO - Running <TaskInstance: Gold_training_Pipeline1.preprocess_the_extracted_data manual__2024-10-03T10:58:50.100477+00:00 [running]> on host 5466e3b84b5d
[2024-10-03T10:59:11.645+0000] {taskinstance.py:2513} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='sdeshan' AIRFLOW_CTX_DAG_ID='Gold_training_Pipeline1' AIRFLOW_CTX_TASK_ID='preprocess_the_extracted_data' AIRFLOW_CTX_EXECUTION_DATE='2024-10-03T10:58:50.100477+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-03T10:58:50.100477+00:00'
[2024-10-03T10:59:11.694+0000] {taskinstance.py:2731} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/components/gold/model_training/data_preprocessing.py", line 29, in preprocess_data
    populate_table(data_table, df)
  File "/opt/airflow/dags/components/utils/database_table_creation.py", line 53, in populate_table
    cur.executemany(query, data_tuples)
psycopg2.errors.SyntaxError: syntax error at or near ":"
LINE 1: INSERT INTO preprocesed_gold_data_tables (Unnamed: 0, date, ...
                                                         ^

[2024-10-03T10:59:11.716+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=Gold_training_Pipeline1, task_id=preprocess_the_extracted_data, execution_date=20241003T105850, start_date=20241003T105911, end_date=20241003T105911
[2024-10-03T10:59:11.725+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 225 for task preprocess_the_extracted_data (syntax error at or near ":"
LINE 1: INSERT INTO preprocesed_gold_data_tables (Unnamed: 0, date, ...
                                                         ^
; 915)
[2024-10-03T10:59:11.759+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-10-03T10:59:11.865+0000] {taskinstance.py:3312} INFO - 0 downstream tasks scheduled from follow-on schedule check
